# microservices-delivery-hub

./: .env.example  .gitignore  .releaserc.json  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  pr-validation.yml
docker/mongo/init/: 01-init-users.js
docker/postgres/init/: 01-init-databases.sql
servicio_bot_whatsapp/: .dockerignore  Dockerfile  config.py  gunicorn_config.py  logger.py  requirements.txt  run.py  run_worker.py
servicio_bot_whatsapp/api/: webhook.py
servicio_bot_whatsapp/consumers/: client_notification_consumer.py
servicio_bot_whatsapp/core/: exceptions.py  messages.py  schemas.py
servicio_bot_whatsapp/services/: audio_handler.py  dialogue_manager.py  gemini_analyzer.py  rabbitmq_service.py  rate_limiter.py  redis_client.py  session_manager.py  twilio_client.py
servicio_bot_whatsapp/workers/: message_worker.py
servicio_empresas/: Dockerfile  config.py  database.py  requirements.txt  run.py  schemas.py
servicio_empresas/api/: api_key_management_routes.py  auth_api_routes.py  menu_api_routes.py  web_panel_menu_api_routes.py
servicio_empresas/core/: exceptions.py
servicio_empresas/data_access/: menu_repository.py  user_repository.py
servicio_empresas/services/: api_key_service.py  auth_service.py  menu_data_service.py
servicio_empresas/utils/: decorators.py
servicio_mototaxis/: Dockerfile  requirements.txt
servicio_mototaxis/app/: main.py
servicio_mototaxis/app/consumers/: dispatch_event_consumer.py
servicio_mototaxis/app/core/: config.py  logger.py
servicio_mototaxis/app/crud/: crud_driver.py  crud_location_redis.py  crud_service_history.py  crud_vehicle.py
servicio_pedidos/: Dockerfile  requirements.txt
servicio_pedidos/app/: main.py
(+28 files in other folders)
